--- a/style/styles.css
+++ b/style/styles.css
@@ -6,5 +6,30 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
+    /* temp */
     border: 1px solid red;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.header {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 14px;
+}
+
+.main {
+    flex: 2 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.main > * {
+    flex: 1;
 }
