--- a/style/styles.css
+++ b/style/styles.css
@@ -33,3 +33,33 @@ body {
 .main > * {
     flex: 1;
 }
+
+/* RPS section inside main */
+.rps-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 120px;
+    flex-wrap: wrap;
+}
+
+.rps {
+    border-radius: 4px;
+    padding: 45px;
+    background-color: white;
+    border: 1px solid lightgrey;
+    font-weight: bold;
+    font-size: 16px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.rps:hover {
+    background-color: black;
+    border: 2px solid goldenrod;
+    color: white;
+}
+
+.rps:active {
+    transform: scale(1.1);
+    border: 4px solid goldenrod;
+}
